--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>EXERCICIOS JAVASCRIPT</title>
         <link href="http://fonts.googleapis.com/css?family=Roboto"
             rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="./styles/style-index.css" />
@@ -24,8 +24,7 @@
                 <a href="./pages/calculadora.html"><li>Calculadora</li></a>
                 <a href="./pages/cat.html"><li>CAT API</li></a>
                 <a href="./pages/cep.html"><li>VIA CEP</li></a>
-                <li>EXERCICIO 3</li>
-                <li>EXERCICIO 4</li>
+                <a href="./pages/lista.html"><li>Lista</li></a>               
             </ul>
         </nav>
         <hr>
