--- a/pages/cat.html
+++ b/pages/cat.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>M1S05 | Exercício 10 | The Cat API</title>
+    <title>Cat API</title>
     <link rel="stylesheet" href="../styles/style-cat.css" />
     <link rel="shortcut icon" href="../comum/favicon.ico" type="image/x-icon" />
     <script src="../scripts/script-cat.js" type="module"></script>
@@ -21,8 +21,7 @@
             <a href="./calculadora.html"><li>Calculadora</li></a>
             <a href="#"><li>CAT API</li></a>
             <a href="./cep.html"><li>VIA CEP</li></a>
-            <li>EXERCICIO 3</li>
-            <li>EXERCICIO 4</li>
+            <a href="./lista.html"><li>Lista</li></a>   
         </ul>
     </nav>
     <hr>
