--- a/pages/cep.html
+++ b/pages/cep.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Aula 270722</title>
+        <title>BUSCAR CEP</title>
         <link rel="shortcut icon" href="#" type="image/x-icon">
         <script src="../scripts/script-cep.js" type="module"></script>
-        <script src="../scripts/script2-cep.js" type="module"></script>
+        <script src="../scripts/script-cep2.js" type="module"></script>
         <link rel="stylesheet" href="../styles/style-cep.css">
     </head>
     <body>
@@ -20,8 +20,7 @@
                 <a href="./calculadora.html"><li>Calculadora</li></a>
                 <a href="./cat.html"><li>CAT API</li></a>
                 <a href="./cep.html"><li>VIA CEP</li></a>
-                <li>EXERCICIO 3</li>
-                <li>EXERCICIO 4</li>
+                <a href="./lista.html"><li>Lista</li></a>   
             </ul>
         </nav>
 
@@ -53,7 +52,6 @@
                     <p id="res-est">ESTADO:</p>
                     <p id="res-uf">UF:</p>
                     <p id="res-cep">CEP:</p>
-                    <p id="res-ddd">DDD:</p>
                     <!--<p id="res-pais">PAIS:</p>-->
                 </div>
             </div>      
