--- a/pages/subscribe.html
+++ b/pages/subscribe.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-
+    <link rel="stylesheet" href="../styles/common-style.css" />
     <link rel="stylesheet" href="../styles/style-lista.css">
     <link rel="shortcut icon" href="../comum/favicon.ico" type="image/x-icon" />
 
