--- a/pages/music-player.html
+++ b/pages/music-player.html
@@ -7,7 +7,7 @@
     <title>Music Player</title>
     <link href="http://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="/styles/common-style.css" />
+    <link rel="stylesheet" href="../styles/common-style.css" />
     <link rel="stylesheet" href="../styles/style-music-player.css" />
     <script defer src="../scripts/script-music-player.js"></script>
 
