--- a/pages/calculadora.html
+++ b/pages/calculadora.html
@@ -25,6 +25,7 @@
                 <a href="../index.html"><li class="item-menu">HOME</li></a>
                 <a href="#"><li class="item-menu">Calculadora</li></a>
                 <a href="./cat.html"><li class="item-menu">CAT API</li></a>
+                <a href="./games.html"><li class="item-menu">Games</li></a>
                 <a href="./cep.html"><li class="item-menu">VIA CEP</li></a>
                 <a href="./lista.html"><li class="item-menu">Lista</li></a>
                 <a href="./music-player.html"><li class="item-menu">Music Player</li></a>
