--- a/pages/metronomo.html
+++ b/pages/metronomo.html
@@ -38,10 +38,9 @@
 
       <ul id="listaMENU">
         <a href="../index.html"><li class="item-menu">HOME</li></a>
-        <a href="../pages/calculadora.html"
-          ><li class="item-menu">Calculadora</li></a
-        >
+        <a href="../pages/calculadora.html"><li class="item-menu">Calculadora</li></a>
         <a href="../pages/cat.html"><li class="item-menu">CAT API</li></a>
+        <a href="./games.html"><li class="item-menu">Games</li></a>
         <a href="../pages/cep.html"><li class="item-menu">VIA CEP</li></a>
         <a href="../pages/lista.html"><li class="item-menu">Lista</li></a>
         <a href="../pages/music-player.html"
