--- a/pages/games.html
+++ b/pages/games.html
@@ -7,6 +7,7 @@
     <title>Cat API</title>
     <link rel="stylesheet" href="../styles/common-style.css" />
     <link rel="stylesheet" href="../styles/games.css" />
+    <link rel="stylesheet" href="../styles/mediaqueryGames.css">
     <link rel="shortcut icon" href="../comum/favicon.ico" type="image/x-icon" />
     <script src="" type="module"></script>
 </head>
@@ -29,16 +30,14 @@
     <hr>
 
     <div id="divGames">
-        <a id="linkGame1" href="#iframeGames" onclick="alterarLinkFilme0()"><img src="https://m.media-amazon.com/images/M/MV5BZjM5NzRlZmItM2Y1Mi00MTNhLTlhZTEtZWNhN2U5M2U3NzBlXkEyXkFqcGdeQXVyMTA0MTM5NjI2._V1_FMjpg_UX1000_.jpg" alt class="capaGame"></a>
-        <a id="linkGame2" href="#iframeGames" onclick="alterarLinkFilme1()"><img src="https://static.wikia.nocookie.net/jamesbond/images/8/84/Tomorrow_Never_Dies_cover.png" alt class="capaGame"></a>
-        <a id="linkGame3" href="#iframeGames" onclick="alterarLinkFilme2()"><img src="https://assets-prd.ignimgs.com/2022/01/19/final-fantasy-tactics-the-war-of-the-lions-button-1642628464216.jpg" alt class="capaGame"></a>
-        <a id="linkGame1" href="#iframeGames" onclick="alterarLinkFilme0()"><img src="https://m.media-amazon.com/images/M/MV5BZjM5NzRlZmItM2Y1Mi00MTNhLTlhZTEtZWNhN2U5M2U3NzBlXkEyXkFqcGdeQXVyMTA0MTM5NjI2._V1_FMjpg_UX1000_.jpg" alt class="capaGame"></a>
-        <a id="linkGame1" href="#iframeGames" onclick="alterarLinkFilme0()"><img src="https://m.media-amazon.com/images/M/MV5BZjM5NzRlZmItM2Y1Mi00MTNhLTlhZTEtZWNhN2U5M2U3NzBlXkEyXkFqcGdeQXVyMTA0MTM5NjI2._V1_FMjpg_UX1000_.jpg" alt class="capaGame"></a>
+        <a class="aGame" id="linkGame1" href="#iframeGames" onclick="alterarLinkGame0()"><img src="https://m.media-amazon.com/images/M/MV5BZjM5NzRlZmItM2Y1Mi00MTNhLTlhZTEtZWNhN2U5M2U3NzBlXkEyXkFqcGdeQXVyMTA0MTM5NjI2._V1_FMjpg_UX1000_.jpg" alt class="capaGame"></a>
+        <a class="aGame" id="linkGame2" href="#iframeGames" onclick="alterarLinkGame1()"><img src="https://static.wikia.nocookie.net/jamesbond/images/8/84/Tomorrow_Never_Dies_cover.png" alt class="capaGame"></a>
+        <a class="aGame" id="linkGame3" href="#iframeGames" onclick="alterarLinkGame2()"><img src="https://assets-prd.ignimgs.com/2022/01/19/final-fantasy-tactics-the-war-of-the-lions-button-1642628464216.jpg" alt class="capaGame"></a>
     </div>
 
     <section class="Section1">
         <div class="container">
-            <iframe id="iframeGames" src="" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>            
+            <iframe id="iframeGames" src="" width="500" height="600" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>            
         </div>
     </section>
 
