--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <a href="#"><li class="item-menu">HOME</li></a>
         <a href="./pages/calculadora.html"><li class="item-menu">Calculadora</li></a>
         <a href="./pages/cat.html"><li class="item-menu">CAT API</li></a>
+        <a href="./pages/games.html"><li class="item-menu">Games</li></a>
         <a href="./pages/cep.html"><li class="item-menu">VIA CEP</li></a>
         <a href="./pages/lista.html"><li class="item-menu">Lista</li></a>
         <a href="./pages/music-player.html"><li class="item-menu">Music Player</li></a>
