--- a/pages/games.html
+++ b/pages/games.html
@@ -10,20 +10,25 @@
     <link rel="stylesheet" href="../styles/mediaqueryGames.css" />
     <link rel="shortcut icon" href="../comum/favicon.ico" type="image/x-icon" />
     <script src="" type="module"></script>
-        <!-- Bootstrap SCRIPTS -->
-        <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-        crossorigin="anonymous"
-      />
-  
-      <!-- Bootstrap Icons -->
-      <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
-      />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <!-- Bootstrap SCRIPTS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+
+    <!-- Bootstrap Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
   </head>
+
   <body>
     <nav>
       <a href="../index.html">
@@ -33,36 +38,11 @@
         />
       </a>
       <ul id="listaMENU">
-        <a href="../index.html"><li class="item-menu">HOME</li></a>
-        <a href="./calculadora.html"><li class="item-menu">Calculadora</li></a>
-        <a href="./cat.html"><li class="item-menu">CAT API</li></a>
-        <a href="#"><li class="item-menu">Games</li></a>
-        <a href="./cep.html"><li class="item-menu">VIA CEP</li></a>
-        <a href="./lista.html"><li class="item-menu">Lista</li></a>
-        <a href="./music-player.html"
-          ><li class="item-menu">Music Player</li></a
-        >
-        <a><li class="openbtn" onclick="openNav()">☰</li></a
-      >
-  
+        <a><li class="openbtn" onclick="openNav()">☰</li></a>
       </ul>
     </nav>
+
     <hr />
-
-
-
-
-
-
-    <div id="mySidebar" class="sidebar">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-      <a href="#">Link 4</a>
-      <a href="#">Link 5</a>
-    </div>
-    
 
     <div id="divGames">
       <a
@@ -130,18 +110,47 @@
         </a>
       </div>
     </section>
+
+    <div id="mySidebar" class="sidebar" data-bs-backdrop="static">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+      <ul id="listaMENUSide">
+        <a href="../index.html"><li class="item-menu">HOME</li></a>
+        <a href="./calculadora.html"><li class="item-menu">Calculadora</li></a>
+        <a href="./cat.html"><li class="item-menu">CAT API</li></a>
+        <a href="#"><li class="item-menu">Games</li></a>
+        <a href="./cep.html"><li class="item-menu">VIA CEP</li></a>
+        <a href="./lista.html"><li class="item-menu">Lista</li></a>
+        <a href="./music-player.html"
+          ><li class="item-menu">Music Player</li></a
+        >
+      </ul>
+
+      <div class="icon-bar">
+        <a class="active" href="#"><i class="fa fa-home"></i></a>
+        <a href="#"><i class="fa fa-search"></i></a>
+        <a href="#"><i class="fa fa-envelope"></i></a>
+        <a href="#"><i class="fa fa-globe"></i></a>
+        <a href="#"><i class="fa fa-trash"></i></a>
+      </div>
+    </div>
     <footer></footer>
-  
-  
+
     <script src="../scripts/games.js" defer></script>
-        <!-- Bootstrap SCRIPTS -->
-        <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"
-      ></script>
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-    
+    <!-- Bootstrap SCRIPTS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
