--- a/index.html
+++ b/index.html
@@ -53,18 +53,14 @@
         <a href="./pages/games.html"><li class="item-menu">Games</li></a>
         <a href="./pages/cep.html"><li class="item-menu">VIA CEP</li></a>
         <a href="./pages/lista.html"><li class="item-menu">Lista</li></a>
-        <a href="./pages/music-player.html"
-          ><li class="item-menu">Music Player</li>
-        </a>
+        <a href="./pages/music-player.html"><li class="item-menu">Music Player</li></a>
+        <a href="./pages/cifradecesar.html"><li class="item-menu">Cifra de Cesar</li></a>
       </ul>
     </nav>
     <hr />
 
     <div id="div">
       <h1>EXERCÍCIOS DE JAVASCRIPT</h1>
-      
-
-      
     </div>
 
     <!-- Bootstrap SCRIPTS -->
@@ -73,7 +69,15 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
