--- a/pages/cep.html
+++ b/pages/cep.html
@@ -21,14 +21,15 @@
       </a>
       <ul id="listaMENU">
         <a href="../index.html"><li class="item-menu">HOME</li></a>
-        <a href="./calculadora.html"><li class="item-menu">Calculadora</li></a>
+       <!--- <a href="./pages/calculadora.html"><li class="item-menu">Calculadora</li></a>-->
         <a href="./cat.html"><li class="item-menu">CAT API</li></a>
         <a href="./games.html"><li class="item-menu">Games</li></a>
         <a href="./cep.html"><li class="item-menu">VIA CEP</li></a>
-        <a href="./lista.html"><li class="item-menu">Lista</li></a>
+              <!--<a href="./lista.html"><li class="item-menu">Lista</li></a>-->
         <a href="./music-player.html"
           ><li class="item-menu">Music Player</li></a
         >
+        <a href="./cifradecesar.html"><li class="item-menu">Cifra de Cesar</li></a>
       </ul>
     </nav>
     <hr />
