--- a/pages/music-player.html
+++ b/pages/music-player.html
@@ -32,12 +32,13 @@
       </a>
       <ul id="listaMENU">
         <a href="../index.html"><li class="item-menu">HOME</li></a>
-        <a href="../pages/calculadora.html"><li class="item-menu">Calculadora</li></a>
+       <!--- <a href="./pages/calculadora.html"><li class="item-menu">Calculadora</li></a>-->
         <a href="../pages/cat.html"><li class="item-menu">CAT API</li></a>
         <a href="./games.html"><li class="item-menu">Games</li></a>
         <a href="../pages/cep.html"><li class="item-menu">VIA CEP</li></a>
-        <a href="../pages/lista.html"><li class="item-menu">Lista</li></a>
+              <!--<a href="./lista.html"><li class="item-menu">Lista</li></a>-->
         <a href="#"><li class="item-menu">Music Player</li></a>
+        <a href="../pages/cifradecesar.html"><li class="item-menu">Cifra de Cesar</li></a>
       </ul>
     </nav>
     <hr>
