--- a/pages/music-player.html
+++ b/pages/music-player.html
@@ -38,6 +38,7 @@
         <a href="../pages/cep.html"><li class="item-menu">VIA CEP</li></a>
               <!--<a href="./lista.html"><li class="item-menu">Lista</li></a>-->
         <a href="#"><li class="item-menu">Music Player</li></a>
+        <a href="../pages/musica.html"><li class="item-menu">Musica</li></a>
         <a href="../pages/cifradecesar.html"><li class="item-menu">Cifra de Cesar</li></a>
       </ul>
     </nav>
